Added variables and modified Dtos and other methods missing.